Fix small gap between navigation bar and page cover

--- a/styles.css
+++ b/styles.css
@@ -406,7 +406,7 @@ img.icon.inline {
 }
 
 #page-cover {
-	margin-top: 3.75rem; /* Navbar height */
+	margin-top: 3.5rem; /* Navbar height */
 	width: 100%;
 	height: 5rem;
 	/* background-image: var(--cover-image); */
